[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsasdk"
version = "1.0.0"
description = "RFC 3161 compliant HTTP client for trusted timestamp authority, with SM3 support"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.6"
authors = [
    {name = "Rick Diao", email = "rickxy@qq.com"},
]
keywords = ["timestamp", "rfc3161", "tsa", "sm3", "signature"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
sm3 = ["gmssl"]
